@@ -1,17 +1,14 @@
 package com.afterlogic.aurora.drive.data.modules.files.repository;
 
 import android.net.Uri;
-import android.support.annotation.NonNull;
-import android.support.annotation.Nullable;
+import androidx.annotation.NonNull;
+import androidx.annotation.Nullable;
 import android.text.TextUtils;
 
-import com.afterlogic.aurora.drive.R;
-import com.afterlogic.aurora.drive.data.modules.AuthorizationResolver;
 import com.afterlogic.aurora.drive.core.common.logging.MyLog;
 import com.afterlogic.aurora.drive.core.common.rx.SimpleObservableSource;
 import com.afterlogic.aurora.drive.core.common.util.FileUtil;
 import com.afterlogic.aurora.drive.core.common.util.IOUtil;
-import com.afterlogic.aurora.drive.core.common.util.ObjectsUtil;
 import com.afterlogic.aurora.drive.data.common.cache.SharedObservableStore;
 import com.afterlogic.aurora.drive.data.common.mapper.Mapper;
 import com.afterlogic.aurora.drive.data.common.mapper.MapperUtil;
@@ -20,9 +17,8 @@ import com.afterlogic.aurora.drive.data.common.repository.Repository;
 import com.afterlogic.aurora.drive.data.model.UploadResult;
 import com.afterlogic.aurora.drive.data.model.project8.AuroraFileP8;
 import com.afterlogic.aurora.drive.data.model.project8.FilesResponseP8;
-import com.afterlogic.aurora.drive.data.modules.appResources.AppResources;
-import com.afterlogic.aurora.drive.data.modules.files.FilesDataModule;
-import com.afterlogic.aurora.drive.data.modules.files.model.dto.ReplaceFileDto;
+import com.afterlogic.aurora.drive.data.modules.AuthorizationResolver;
+import com.afterlogic.aurora.drive.data.modules.files.model.dto.ShortFileDto;
 import com.afterlogic.aurora.drive.data.modules.files.service.FilesServiceP8;
 import com.afterlogic.aurora.drive.model.Actions;
 import com.afterlogic.aurora.drive.model.AuroraFile;
@@ -30,7 +26,7 @@ import com.afterlogic.aurora.drive.model.AuroraSession;
 import com.afterlogic.aurora.drive.model.DeleteFileInfo;
 import com.afterlogic.aurora.drive.model.FileInfo;
 import com.afterlogic.aurora.drive.model.Progressible;
-import com.afterlogic.aurora.drive.model.error.ApiResponseError;
+import com.afterlogic.aurora.drive.model.Storage;
 import com.afterlogic.aurora.drive.model.error.FileNotExistError;
 import com.annimon.stream.Collectors;
 import com.annimon.stream.Stream;
@@ -45,12 +41,13 @@ import javax.inject.Inject;
 import javax.inject.Named;
 
 import io.reactivex.Completable;
-import io.reactivex.Maybe;
 import io.reactivex.Observable;
 import io.reactivex.Single;
 import okhttp3.ResponseBody;
 
-import static com.afterlogic.aurora.drive.data.modules.files.repository.FileRepositoryUtil.CHECKED_TYPES;
+import static com.afterlogic.aurora.drive.data.modules.files.FilesDataModule.CACHE_DIR;
+import static com.afterlogic.aurora.drive.data.modules.files.FilesDataModule.THUMB_DIR;
+
 
 /**
  * Created by sashka on 19.10.16.<p/>
@@ -61,7 +58,6 @@ public class P8FilesSubRepositoryImpl extends Repository implements FileSubRepos
     private static final String FILES_P_8 = "filesP8";
 
     private final FilesServiceP8 filesService;
-    private final AppResources appResources;
 
     private final File thumbDir;
     private final File cacheDir;
@@ -106,45 +102,29 @@ public class P8FilesSubRepositoryImpl extends Repository implements FileSubRepos
     @Inject
     P8FilesSubRepositoryImpl(SharedObservableStore cache,
                              FilesServiceP8 filesService,
-                             AppResources appResources,
-                             @Named(FilesDataModule.THUMB_DIR) File thumbDir,
-                             @Named(FilesDataModule.CACHE_DIR) File cacheDir,
+                             @Named(THUMB_DIR) File thumbDir,
+                             @Named(CACHE_DIR) File cacheDir,
                              AuthorizationResolver authorizationResolver,
                              SessionManager sessionManager) {
         super(cache, FILES_P_8);
         this.authorizationResolver = authorizationResolver;
         this.filesService = filesService;
-        this.appResources = appResources;
         this.thumbDir = thumbDir;
         this.cacheDir = cacheDir;
         this.sessionManager = sessionManager;
     }
 
     @Override
-    public Single<List<String>> getAvailableFileTypes() {
-        return Single.fromCallable(() -> Stream.of(appResources.getStringArray(R.array.folder_types))
-                .map(type -> {
-                    List<AuroraFile> files = getFiles(AuroraFile.parse("", type, true))
-                            .toMaybe()
-                            .onErrorResumeNext(error -> {
-                                if (error instanceof ApiResponseError){
-                                    return Maybe.empty();
-                                } else {
-                                    return Maybe.error(error);
-                                }
-                            })
-                            .blockingGet();
-                    if (files != null) {
-                        CHECKED_TYPES.put(type, files);
-                        return type;
-                    } else {
-                        return null;
-                    }
-                })
-                .filter(ObjectsUtil::nonNull)
-                .collect(Collectors.toList())
-        )//-----|
-                .doFinally(FileRepositoryUtil::startClearCheckedCountDown);
+    public Single<List<Storage>> getAvailableStorages() {
+
+        return filesService.getAvailableStorages()
+                .compose(Repository::withNetMapper)
+                .compose(authorizationResolver::checkAuth)
+                .map(dtos -> Stream.of(dtos)
+                        .map(dto -> new Storage(dto.getType(), dto.getDisplayName()))
+                        .toList()
+                );
+
     }
 
     @Override
@@ -154,17 +134,10 @@ public class P8FilesSubRepositoryImpl extends Repository implements FileSubRepos
 
     @Override
     public Single<List<AuroraFile>> getFiles(AuroraFile folder, @Nullable String pattern) {
-        return Single.defer(() -> {
-            if (TextUtils.isEmpty(pattern) && "".equals(folder.getFullPath()) && CHECKED_TYPES.containsKey(folder.getType())){
-                List<AuroraFile> cached = CHECKED_TYPES.remove(folder.getType());
-                return Single.just(cached);
-            } else {
-                return filesService.getFiles(folder.getType(), folder.getFullPath(), pattern)
-                        .compose(Repository::withNetMapper)
-                        .compose(authorizationResolver::checkAuth)
-                        .map(this::mapFilesResponse);
-            }
-        });
+        return filesService.getFiles(folder.getType(), folder.getFullPath(), pattern)
+                .compose(Repository::withNetMapper)
+                .compose(authorizationResolver::checkAuth)
+                .map(this::mapFilesResponse);
     }
 
     private List<AuroraFile> mapFilesResponse(FilesResponseP8 response) {
@@ -178,8 +151,11 @@ public class P8FilesSubRepositoryImpl extends Repository implements FileSubRepos
             // TODO: add Authorization Bearer header to Glide and use thumbnail url every where
 
             if (file.isLink() && !TextUtils.isEmpty(file.getThumbnailUrl())) {
+
                 String thumbUrl = file.getThumbnailUrl();
+
                 if (thumbUrl.startsWith("?")) {
+
                     AuroraSession session = sessionManager.getSession();
 
                     if (session == null) {
@@ -187,12 +163,19 @@ public class P8FilesSubRepositoryImpl extends Repository implements FileSubRepos
                     }
 
                     thumbUrl = session.getDomain().toString() + "/" + thumbUrl;
+
                 }
+
                 return Single.just(Uri.parse(thumbUrl.replace("\\\\/", "/")));
+
             } else {
+
                 File cache = FileUtil.getFile(thumbDir, file);
+
                 if (cache.exists() && cache.lastModified() == file.getLastModified()){
+
                     return Single.just(Uri.fromFile(cache));
+
                 } else {
 
                     Single<ResponseBody> thumbRequest = filesService.getFileThumbnail(
@@ -201,7 +184,9 @@ public class P8FilesSubRepositoryImpl extends Repository implements FileSubRepos
                             file.getName(),
                             file.getHash()
                     );
+
                     return loadFileToCache(file, thumbDir, thumbRequest);
+
                 }
             }
         });
@@ -210,18 +195,27 @@ public class P8FilesSubRepositoryImpl extends Repository implements FileSubRepos
     @Override
     public final Single<Uri> viewFile(AuroraFile file) {
         return Single.defer(() -> {
+
             File cache = FileUtil.getFile(cacheDir, file);
-            if (cache.exists() && cache.length() > 0 && cache.lastModified() == file.getLastModified()){
+
+            if (cache.exists() && cache.length() > 0
+                    && cache.lastModified() == file.getLastModified()) {
+
                 return Single.just(Uri.fromFile(cache));
+
             } else {
+
                 Single<ResponseBody> viewRequest = filesService.viewFile(
                         file.getType(),
                         file.getPath(),
                         file.getName(),
                         file.getHash()
                 );
+
                 return loadFileToCache(file, cacheDir, viewRequest);
+
             }
+
         });
     }
 
@@ -235,7 +229,7 @@ public class P8FilesSubRepositoryImpl extends Repository implements FileSubRepos
                 file.isLink()
         ).compose(Repository::withNetMapper)
                 .compose(authorizationResolver::checkAuth)
-                .toCompletable();
+                .ignoreElement();
     }
 
     @Override
@@ -246,12 +240,12 @@ public class P8FilesSubRepositoryImpl extends Repository implements FileSubRepos
                 file.getName()
         ).compose(Repository::withNetMapper)
                 .compose(authorizationResolver::checkAuth)
-                .toCompletable();
+                .ignoreElement();
     }
 
     @Override
     public Completable checkFileExisting(AuroraFile file) {
-        return checkFile(file).toCompletable();
+        return checkFile(file).ignoreElement();
     }
 
     @Override
@@ -267,12 +261,23 @@ public class P8FilesSubRepositoryImpl extends Repository implements FileSubRepos
 
     @Override
     public Single<ResponseBody> downloadFileBody(AuroraFile file) {
-        return filesService.downloadFile(file.getType(), file.getPath(), file.getName(), file.getHash());
+        return filesService.downloadFile(
+                file.getType(),
+                file.getPath(),
+                file.getName(),
+                file.getHash()
+        );
     }
 
     @Override
     public Single<String> createPublicLink(AuroraFile file) {
-        return filesService.createPublicLink(file.getType(), file.getPath(), file.getName(), file.getSize(), file.isFolder())
+        return filesService.createPublicLink(
+                file.getType(),
+                file.getPath(),
+                file.getName(),
+                file.getSize(),
+                file.isFolder()
+        ) // filesService.createPublicLink
                 .compose(Repository::withNetMapper)
                 .compose(authorizationResolver::checkAuth);
     }
@@ -282,40 +287,45 @@ public class P8FilesSubRepositoryImpl extends Repository implements FileSubRepos
         return filesService.deletePublicLink(file.getType(), file.getPath(), file.getName())
                 .compose(Repository::withNetMapper)
                 .compose(authorizationResolver::checkAuth)
-                .toCompletable();
+                .ignoreElement();
     }
 
     @Override
     public Completable replaceFiles(AuroraFile targetFolder, List<AuroraFile> files) {
-        Mapper<List<ReplaceFileDto>, Collection<AuroraFile>> mapper = MapperUtil.listOrEmpty(new FileToReplaceFileMapper());
+
+        Mapper<List<ShortFileDto>, Collection<AuroraFile>> mapper =
+                MapperUtil.listOrEmpty(new FileToShortFileDtoMapper());
 
         return filesService.replaceFiles(
                 files.get(0).getType(),
                 targetFolder.getType(),
-                files.get(0).getPath(),
                 targetFolder.getFullPath(),
                 mapper.map(files)
         )//-----|
-                .toCompletable();
+                .ignoreElement();
     }
 
     @Override
     public Completable copyFiles(AuroraFile targetFolder, List<AuroraFile> files) {
-        Mapper<List<ReplaceFileDto>, Collection<AuroraFile>> mapper = MapperUtil.listOrEmpty(new FileToReplaceFileMapper());
+
+        Mapper<List<ShortFileDto>, Collection<AuroraFile>> mapper =
+                MapperUtil.listOrEmpty(new FileToShortFileDtoMapper());
 
         return filesService.copyFiles(
                 files.get(0).getType(),
                 targetFolder.getType(),
-                files.get(0).getPath(),
                 targetFolder.getFullPath(),
                 mapper.map(files)
         )//-----|
-                .toCompletable();
+                .ignoreElement();
     }
 
     @Override
-    public Observable<Progressible<UploadResult>> uploadFileToServer(AuroraFile folder, @NonNull FileInfo fileInfo) {
-        SimpleObservableSource<Progressible<UploadResult>> progressSource = new SimpleObservableSource<>();
+    public Observable<Progressible<UploadResult>> uploadFileToServer(AuroraFile folder,
+                                                                     @NonNull FileInfo fileInfo) {
+
+        SimpleObservableSource<Progressible<UploadResult>> progressSource =
+                new SimpleObservableSource<>();
 
         long size = fileInfo.getSize();
         Observable<Progressible<UploadResult>> request = filesService.uploadFile(
@@ -331,7 +341,8 @@ public class P8FilesSubRepositoryImpl extends Repository implements FileSubRepos
                 .map(response -> new UploadResult())
                 .doOnEvent((uploadResult, throwable) -> progressSource.complete())
                 .doOnDispose(progressSource::clear)
-                .map(result -> new Progressible<>(result, size, size, fileInfo.getName(), true))
+                .map(result ->
+                        new Progressible<>(result, size, size, fileInfo.getName(), true))
                 .toObservable()
                 .doFinally(() -> MyLog.d("Request released."));
 
@@ -350,7 +361,7 @@ public class P8FilesSubRepositoryImpl extends Repository implements FileSubRepos
 
             return filesService.delete(type, deleteInfo)
                     .compose(Repository::withNetMapper)
-                    .toCompletable();
+                    .ignoreElement();
         });
     }
 
